# simple-vision-kit

./: README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  make.bat
docs/source/: change_logs.rst  conf.py  get_start.rst  index.rst  modules.rst  svkcore.annotation.rst  svkcore.common.rst  svkcore.rst  svkcore.shapes.rst  svkcore.visualize.rst
src/svkcore/common/: common.py  np_ops.py
src/svkcore/visualize/: visualize.py
